fix submit input alignment

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ textarea, input, button, select {
   line-height: normal;
 }
 
-.signup-form input {
+.signup-form input[type="email"], .signup-form input[type="text"] {
   text-indent: 1.7rem;
 }
 
